@@ -660,17 +660,14 @@ block|}
 block|}
 if|if
 condition|(
-name|maxLon
-operator|-
+name|within90LonDegrees
+argument_list|(
 name|lon
-operator|<
-literal|90
-operator|&&
-name|lon
-operator|-
+argument_list|,
 name|minLon
-operator|<
-literal|90
+argument_list|,
+name|maxLon
+argument_list|)
 operator|&&
 name|SloppyMath
 operator|.
@@ -744,6 +741,65 @@ return|return
 name|Relation
 operator|.
 name|CELL_CROSSES_QUERY
+return|;
+block|}
+comment|/** Return whether all points of {@code [minLon,maxLon]} are within 90 degrees of {@code lon}. */
+DECL|method|within90LonDegrees
+specifier|static
+name|boolean
+name|within90LonDegrees
+parameter_list|(
+name|double
+name|lon
+parameter_list|,
+name|double
+name|minLon
+parameter_list|,
+name|double
+name|maxLon
+parameter_list|)
+block|{
+if|if
+condition|(
+name|maxLon
+operator|<=
+name|lon
+operator|-
+literal|180
+condition|)
+block|{
+name|lon
+operator|-=
+literal|360
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|minLon
+operator|>=
+name|lon
+operator|+
+literal|180
+condition|)
+block|{
+name|lon
+operator|+=
+literal|360
+expr_stmt|;
+block|}
+return|return
+name|maxLon
+operator|-
+name|lon
+operator|<
+literal|90
+operator|&&
+name|lon
+operator|-
+name|minLon
+operator|<
+literal|90
 return|;
 block|}
 block|}
