@@ -2116,6 +2116,120 @@ return|return
 literal|false
 return|;
 block|}
+DECL|method|testWithin90LonDegrees
+specifier|public
+name|void
+name|testWithin90LonDegrees
+parameter_list|()
+block|{
+name|assertTrue
+argument_list|(
+name|GeoUtils
+operator|.
+name|within90LonDegrees
+argument_list|(
+literal|0
+argument_list|,
+operator|-
+literal|80
+argument_list|,
+literal|80
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|GeoUtils
+operator|.
+name|within90LonDegrees
+argument_list|(
+literal|0
+argument_list|,
+operator|-
+literal|100
+argument_list|,
+literal|80
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|GeoUtils
+operator|.
+name|within90LonDegrees
+argument_list|(
+literal|0
+argument_list|,
+operator|-
+literal|80
+argument_list|,
+literal|100
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|GeoUtils
+operator|.
+name|within90LonDegrees
+argument_list|(
+operator|-
+literal|150
+argument_list|,
+literal|140
+argument_list|,
+literal|170
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|GeoUtils
+operator|.
+name|within90LonDegrees
+argument_list|(
+operator|-
+literal|150
+argument_list|,
+literal|120
+argument_list|,
+literal|150
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|GeoUtils
+operator|.
+name|within90LonDegrees
+argument_list|(
+literal|150
+argument_list|,
+operator|-
+literal|170
+argument_list|,
+operator|-
+literal|140
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|GeoUtils
+operator|.
+name|within90LonDegrees
+argument_list|(
+literal|150
+argument_list|,
+operator|-
+literal|150
+argument_list|,
+operator|-
+literal|120
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
